--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'maven-publish'
 }
 
-group 'me.window'
+group 'com.github.MinestomPlugins'
 version '1.0.0'
 
 allprojects {
@@ -27,4 +27,14 @@ publishing {
             from components.java
         }
     }
+}
+
+java {
+    withSourcesJar()
+    withJavadocJar()
+}
+
+wrapper {
+    gradleVersion = "7.6"
+    distributionType = Wrapper.DistributionType.ALL
 }
