--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,10 +1,5 @@
-# Tell Jitpack to build using Java 18 (defaults to 8)
-
 jdk:
-  - zulu18
-
+  - openjdk18
 before_install:
-  - source "$HOME/.sdkman/bin/sdkman-init.sh"
-  - sdk update
-  - sdk install java 18.0.2-zulu
-  - sdk use java 18.0.2-zulu
+   - sdk install java 18.0.1-open
+   - sdk use java 18.0.1-open
