--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,5 +1,5 @@
 jdk:
-  - openjdk18
+  - zulu18
 before_install:
-   - sdk install java 18.0.1-open
-   - sdk use java 18.0.1-open
+   - sdk install java 18.0.2-zulu
+   - sdk use java 18.0.2-zulu
