--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,9 @@ plugins {
 group 'com.github.MinestomPlugins'
 version '1.0.0'
 
+sourceCompatibility = 18
+targetCompatibility = 18
+
 allprojects {
     repositories {
         mavenCentral()
@@ -22,7 +25,7 @@ publishing {
         release(MavenPublication) {
             groupId = 'com.github.MinestomPlugins'
             artifactId = 'lib-permission'
-            version = '1.0.0'
+            version = '1.0.2'
 
             from components.java
         }
